# ComfyUI_IrodoriTTS-v2_Wrapper

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: ModelChatSample.json
irodori_tts/: codec.py  tokenizer.py
web/: emoji.js  ref_audio.js
